
To see details of a given bug, visit
  https://bugs.kde.org/show_bug.cgi?id=XXXXXX
where XXXXXX is the bug number as listed below.

385386  Assertion failed "szB >= CACHE_ENTRY_SIZE" at m_debuginfo/image.c:517
400593  In Coregrind, use statx for some internal syscalls if [f]stat[64] fail
400872  Add nanoMIPS support to Valgrind
404406  s390x: z14 miscellaneous instructions not implemented
405201  Incorrect size of struct vki_siginfo on 64-bit Linux architectures
406561  mcinfcallWSRU gdbserver_test fails on ppc64
406824  Unsupported baseline
407218  Add support for the copy_file_range syscall
407307  Intercept stpcpy also in ld.so for arm64
407376  Update Xen support to 4.12 (4.13, actually) and add more coverage
        == 390553
407764  drd cond_post_wait gets wrong (?) condition on s390x z13 system
408009  Expose rdrand and f16c even on avx if host cpu supports them
408091  Missing pkey syscalls
408414  Add support for missing for preadv2 and pwritev2 syscalls
409141  Valgrind hangs when SIGKILLed
409206  Support for Linux PPS and PTP ioctls
409367  exit_group() after signal to thread waiting in futex() causes hangs
409429  amd64: recognize 'cmpeq' variants as a dependency breaking idiom
409780  References to non-existent configure.in
410556  Add support for BLKIO{MIN,OPT} and BLKALIGNOFF ioctls
410599  Non-deterministic behaviour of pth_self_kill_15_other test
410757  discrepancy for preadv2/pwritev2 syscalls across different versions
411134  Allow the user to change a set of command line options during execution
411451  amd64->IR of bt/btc/bts/btr with immediate clears zero flag
412344  Problem setting mips flags with specific paths
412408  unhandled arm-linux syscall: 124 - adjtime - on arm-linux
413119  Ioctl wrapper for DRM_IOCTL_I915_GEM_MMAP
413330  avx-1 test fails on AMD EPYC 7401P 24-Core Processor
413603  callgrind_annotate/cg_annotate truncate function names at '#'
414565  Specific use case bug found in SysRes VG_(do_sys_sigprocmask)