@@ -11,6 +11,7 @@
 #define _GNU_SOURCE 1
 
 #include "../../config.h"
+#include <errno.h>
 #include <stdio.h>
 #include <assert.h>
 #include <pthread.h>
@@ -56,7 +57,7 @@ int main(int argc, char** argv)
 #endif
   fprintf(stderr, "Attempt to lock for writing recursively (not allowed).\n");
   r = pthread_rwlock_wrlock(&rwlock); assert(r == 0);
-  r = pthread_rwlock_wrlock(&rwlock); assert(r != 0);
+  r = pthread_rwlock_trywrlock(&rwlock); assert(r == EBUSY);
   r = pthread_rwlock_unlock(&rwlock); assert(r == 0);
   r = pthread_rwlock_destroy(&rwlock); assert(r == 0);
 
